--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,9 +1,6 @@
-#app {
-   width: 100%;
-   height: 100%;
-   background-color: yellow; 
-}
-
-.wrapper {
-   background-color: yellow; 
+body {
+   height: 100vh;
+   margin: 0 0 0 0 !important;
+   overflow: hidden;
+   background-color: white;
 }
