add iconfont and alibba font

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,7 @@
+@import "@/assets/font/font.scss";
+@import "@/assets/iconfont/iconfont.css";
 body {
+   font-family: Alibaba-Regular, Alibaba-Light;
    height: 100vh;
    margin: 0 0 0 0 !important;
    overflow: hidden;
